--- a/LESS/index.less
+++ b/LESS/index.less
@@ -4,6 +4,8 @@
 /* Below this line is where you will start your work */
 /* It is important to note, you will not be writing any CSS in this file*/
 @import '../Header/Header.less';
+@import '../Menu/Menu.js';
+@import '../Article/Article.js';
 
 html, body {
   margin: 0;
@@ -11,3 +13,4 @@ html, body {
   font-family: 'Roboto';
   background-color: #fffef7;
 }
+
